fix css break on mobile

--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -5,9 +5,9 @@
 .search-form {
   margin-top: 32px;
   .input-group {
+    width: 400px;
     & .form-control {
       border-color: var(--bg-color);
-      width: 300px;
   
       &:focus {
         box-shadow: none;
@@ -15,9 +15,9 @@
       }
     }
     @include media-breakpoint-down(sm) {
-      & .form-control {
-        width: 100%;
-      }
+      width: 90%;
+      margin: auto;
+
       & button {
         width: 100%;
         margin-top: 10px;
